# zkp-bootcamp

./: .gitignore  .gitmodules
assigment1/: main.tex  notebook.ipynb
assigment6-written/: main.tex
assignment1/: notebook.ipynb
assignment2/: Basic-homomorphisms-week-1.ipynb
assignment2/rusty_solution/: Cargo.toml
assignment2/rusty_solution/src/: main.rs
assignment3/: ecdsa.py
assignment7/: main.ipynb  main.py
pre-course-work/: linalg.ipynb  main.tex
python_solutions/: week8.ipynb
python_solutions/assigment6/: main.ipynb  main.tex
python_solutions/assignment4/: README  solution.py
python_solutions/assignment5/: solution.py
python_solutions/assignment6/: main.ipynb  main.tex
python_solutions/assignment7/: main.ipynb
python_solutions/week10/: week10.ipynb
python_solutions/week9/: week9.ipynb
rust-impl-algorithms/: .gitignore  Cargo.toml
rust-impl-algorithms/src/: lib.rs  main.rs  traits.rs  utils.rs
rust-impl-algorithms/tests/: mod.rs  test_merkle_tree.rs
rusty_solution/: Cargo.toml
rusty_solution/src/: lib.rs  main.rs
rusty_solution/src/assignment2/: solution.rs
rusty_solution/src/assignment3/: notebook.ipynb  solution.rs
rusty_solutions/: Cargo.toml
rusty_solutions/assignment5/: Cargo.toml
rusty_solutions/assignment5-solana/: Anchor.toml  package.json
rusty_solutions/assignment5_6/: Cargo.toml  main.ipynb
rusty_solutions/assignment7/: Cargo.toml
rusty_solutions/normal-rust-solutions/: Cargo.toml
solidity-solutions/: main.ipynb
solidity-solutions/assignment5/: assignment5.md  solution_python.md
(+31 files in other folders)
