[package]
name = "rusty_solution"
version = "0.1.0"
edition = "2021"

[dependencies]
discrete-logarithm = "1.0.0"
generic-ec = { version = "0.4.0", features = ["curve-secp256k1"] }
num-bigint = "0.4.6"
num-rational = "0.4.2"
num-traits = "0.2.19"
rand = "0.8.5"
rug = "1.25.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
